--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -1,3 +1,16 @@
+
+
+.icon-module {
+  background-image: url(../images/module.jpg);
+}
+
+.module-mask {
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  opacity: 0.1;
+}
+
 .vp-btn {
   display: inline-block;
   margin-bottom: 0;
