--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -14,6 +14,8 @@
   opacity: 0.1;
 }
 
+/* 公共样式用vp-开头 */
+/* 按钮（白、蓝、红三种样式） */
 .vp-btn {
   display: inline-block;
   margin-bottom: 0;
@@ -62,4 +64,9 @@
   color: #fff;
   background-color: #f78989;
   border-color: #f78989;
+}
+
+/* 输入框的报错提示 */
+.vp-error {
+  border: 1px solid #F56C6C;
 }
